--- a/stijl.css
+++ b/stijl.css
@@ -1,58 +1,100 @@
-  .flex-container_1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-
-  .flex-container_2 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-
-  .flex-container_3 {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .button {
-    font: bold 14px Arial;
-    text-decoration: none;
-    background-color: azure;
-    color: #333333;
-    display: flex;   
-    padding: 2px 6px 2px 6px;
-    border-top: 1px solid #CCCCCC;
-    border-right: 1px solid #333333;
-    border-bottom: 1px solid #333333;
-    border-left: 1px solid #CCCCCC;
-    
-  }
-
-  div {
-    margin: 10px;
-    padding: 20px;
-
+/***Generiek***/
+body {
+	width: 90%;
+	margin: 0 auto;
+	font-size: 80%;
+	font-family:"Courier New", Courier, monospace;
+	letter-spacing: 0.15em;
+	background-color: #f0ead6;
 }
 
-  h1 {
-    text-align: center;
-    background-color: aquamarine;
-  }
+header {
+	padding: 0.25em;
+	border: 6px double black;
+	border-radius: 10px;
+}
 
-  h2 {
-    text-align: center;
-    background-color: aquamarine;
-  }
+h1, h2 {
+	font-variant: small-caps;
+	text-align: center;
+}
 
-  ul {
-     list-style: none;
-  }  
+h1 {
+	font-size: 4em;
+}
 
-  li {
-      align-content: stretch;
-  }
+h2 {
+	font-size: 2em;
+	padding: 0.75em;
+}
 
-  
+article {
+	display: block;
+	width: auto;
+	font-size: 16px;
+}
+
+p {
+	padding: 1em;
+}
+
+
+/***Vormgeving menu***/
+ul {
+	font-size: 1.5em;
+	font-variant: small-caps;
+	width:  auto;
+	padding: 1em;
+	margin: auto;
+	border-top: 2px solid black;
+	border-bottom: 1px solid black;
+	background-color: #f0ead6;
+	text-align: center;
+}
+
+li {
+	display: inline;
+	
+}
+
+a { 
+	color: black;
+	border-radius: 10px;
+	text-decoration: none;
+}
+	
+a:hover {
+	background-color: #d5b880;
+}
+
+a:link {
+	background-color: Ivory;
+}
+
+/***Specifiek***/
+.page {
+	width: auto;
+	margin: 1em 1em;
+	padding: 1em 1em;
+	background-color: Ivory;
+}
+
+.buttoncontainer {
+	text-align: center;
+}
+
+.button {
+	background-color: #d5b880;
+	height: 2em;
+	width: 4em;
+	border-radius: 10px;
+	font-family: "Courier New", Courier, monospace;
+	font-size: 1.5em;
+	margin: 10px auto 10px auto;
+}
+
+#mySnakeCanvas {
+	display: block;
+	border: 1px solid black;
+	margin: 10px auto;
+}
